# ruflo

.agents/skills/agent-coordination/: SKILL.md
.claude/agents/academic/: academic-anthropologist.md  academic-geographer.md  academic-historian.md  academic-narratologist.md  academic-psychologist.md
.claude/helpers/: cache-optimizer-hooks.ps1  daemon-manager.sh  learning-hooks.sh  statusline.cjs
docs/: ARCHITECTURE.md  HANDOFF.md  QUICKSTART.md  improvement_plan.md
docs/tasks/: 00-AGENT-PROTOCOL.md  00-README.md  00-rebrand-monobrain.md  01-semantic-route-layer.md  02-llm-fallback-routing.md  03-keyword-routing.md  04-capability-metadata.md  05-typed-io-contracts.md  06-auto-retry.md  07-cost-tracking.md  08-graph-checkpointing.md  09-multi-tier-memory.md  10-entity-memory.md  11-episodic-memory.md  12-trace-hierarchy.md  13-latency-percentiles.md  14-session-replay.md  15-observability-bus.md  16-human-in-the-loop.md  17-managed-agent.md  18-test-model.md  19-task-dag.md  20-typed-swarm-state.md  21-workflow-dsl.md  22-team-routing-modes.md  23-shared-instructions.md  24-prompt-versioning.md  25-bootstrap-fewshot.md  26-dynamic-prompt-assembly.md  27-per-run-model-tier.md  28-agent-knowledge-base.md  29-agent-versioning.md  30-agent-registry.md  31-tool-versioning.md  32-microagent-triggers.md  33-eval-datasets.md  34-regression-benchmarks.md  35-termination-conditions.md  36-consensus-audit.md  37-dead-letter-queue.md  (+12 more)
tests/routing/: route-layer.test.ts
v3/: CLAUDE.md  package-lock.json
v3/mcp/tools/: agent-tools.ts
v3/plugins/gastown-bridge/: Cargo.toml
(+187 files in other folders)
